<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="truet_text">True</string>
    <string name="false_text">False</string>
    <string name="next_button">next_button</string>
    <string name="previous_button">previous_button</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
    <string name="start_quizz">Start Quizz</string>
</resources>